--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary-color: #ff8c00;
+  --secondary-color: #ff4d55;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -26,4 +31,18 @@ code {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.main__btn {
+  background-color: white;
+  padding: 0.5rem 1rem; /* px-4 py-2 */
+  color: black;
+  font-weight: bold;
+  border-radius: 0.375rem; /* rounded */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* shadow-md */
+  transition: all 0.3s linear;
+}
+
+.main__btn:hover {
+  background: linear-gradient(to left, var(--secondary-color), #ff8c00);
 }
