--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -5,7 +5,7 @@
 }
 
 .swiper-slide {
-  width: auto; /* Ensure slides take their content width */
+  width: auto; 
   flex-shrink: 0; /* Prevent shrinking */
   min-width: 230px; /* Ensure a minimum width for the cards */
 }
