--- a/src/index.css
+++ b/src/index.css
@@ -34,17 +34,24 @@ code {
 }
 
 .main__btn {
-  background-color: white;
-  padding: 0.5rem 1rem; /* px-4 py-2 */
-  color: black;
-  font-weight: bold;
-  border-radius: 0.375rem; /* rounded */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* shadow-md */
-  transition: all 0.3s linear;
+  margin-top: 0.75rem; /* mt-3 */
+  width: 100%; /* w-full */
+  padding-top: 0.5rem; /* py-2 */
+  padding-bottom: 0.5rem;
+  padding-left: 1rem; /* px-4 */
+  padding-right: 1rem;
+  text-align: center; /* text-center */
+  background-color: white; /* bg-white */
+  color: black; /* text-black */
+  border-radius: 0.25rem; /* rounded */
+  font-weight: bold; /* font-bold */
+  font-size: 1.125rem; /* text-lg */
+  transition: transform 0.3s, background 0.3s; /* transition-all */
 }
 
 .main__btn:hover {
-  background: linear-gradient(to left, var(--secondary-color), #ff8c00);
+  background: linear-gradient(to left, #f56565, #ed8936); /* bg-gradient-to-l from-red-500 to-orange-500 */
+  transform: scale(1.05); /* hover:scale-105 */
 }
 
 .pagination {
